--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Brewery Finder, by Jason Rector" />
     <link
       href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>Brewery Finder</title>
   </head>
   <body>
     <div id="root"></div>
